--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 쉽않생.
-SEOTitle: 킹뿌둥 | YurmE_Elog
+title: "쉽않생."
+SEOTitle: "킹뿌둥 | YurmE_Elog"
 header-img: img/home-bg.jpg
 email: yurimee225@gmail.com
 description: "Hello!"
