--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: yurimee225@gmail.com
 description: "Hello!"
 keyword: "Blog, Java, Spring, Study"
-url: "https://YurmE_E.github.io"              # your host, for absolute URL
+url: "YurmE_E.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
